--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <nav>
             <img src="res/media/logo.png" alt="logo" class="logo">
             <ul id="sidemenu">
-                <li><a href="#hero" >Home</a></li>
+                <li><a href="https://anuja-rahul.github.io/web-dev-cw.github.io/" >Home</a></li>
                 <li><a href="#about">our mission</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="https://nimesha-savinda.github.io/Gallery/">Gallery</a></li>
+                <li><a href="https://keshudana.github.io/Shop_for_CW.github.io/">Shop</a></li>
                 <li><a href="#">Contact us</a></li>
-                <li><a href="#"class="active">Sitemap</a></li>
+                <li><a href="https://nimesha-savinda.github.io/sitemap/"class="active">Sitemap</a></li>
                 <li><a href="#">Login | Signup</a></li>
                 <li><a href="#">Learn More</a></li>
                 <i class="material-symbols-outlined nav-icon close" onclick="closeMenu()">close</i>
@@ -34,31 +34,31 @@
 <svg viewBox="0 0 1662 650">
     <g>
         <title>Layer 1</title>
-        <a href="https://example.com">
+        <a href="https://keshudana.github.io/Splashpage_for_CW.github.io/">
         <rect id="splash_screen" height="61" width="115" y="33.8" x="419.26924" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://google.com">
-        <rect id="Gallery" height="61" width="115" y="234.39171" x="584.87575" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://ee.com">
+        <a href="https://keshudana.github.io/Shop_for_CW.github.io/">
+        <rect id="Shop" height="61" width="115" y="234.39171" x="584.87575" fill="#fff" stroke="#000" rx="15"/></a>
+        <a href="https://anuja-rahul.github.io/web-dev-cw.github.io/">
             <rect id="Home_page" height="61" width="115" y="31.8" x="750.46155" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://ex.com">
+        <a href="https://anuja-rahul.github.io/web-dev-cw.github.io/feedback.html">
             <rect id="Feedback" height="61" width="115" y="194.15503" x="915.05326" fill="#fff" stroke="#000" rx="15"/></a>
         <a href="https://e.com">
             <rect id="Team" height="61" width="115" y="335.39161" x="584.87575" fill="#fff" stroke="#000" rx="15"/></a>
         <a href="https://.com">
             <rect id="User_profile" height="61" width="115" y="111.90651" x="915.05326" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://.com">
+        <a href="https://nimesha-savinda.github.io/sitemap/">
             <rect id="Site_map" height="61" width="115" y="281.49672" x="916.31908" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://e.com">
-            <rect id="Shop" height="61" width="115" y="152.39161" x="585.87575" fill="#fff" stroke="#000" rx="15"/></a>
+        <a href="https://nimesha-savinda.github.io/Gallery/">
+            <rect id="Gallery" height="61" width="115" y="152.39161" x="585.87575" fill="#fff" stroke="#000" rx="15"/></a>
         <!--<a href="https://exarrrrrrle.com">
             <rect id="svg_42" height="61" width="115" y="433.24258" x="916.33012" fill="#fff" stroke="#000" rx="15"/></a>-->
-        <a href="https://ya.com">
+        <a href="https://anuja-rahul.github.io/web-dev-cw.github.io/content.html">
             <rect id="content_3" height="61" width="115" y="511.55542" x="917.53493" fill="#fff" stroke="#000" rx="15"/></a>
         <a href="https://yao.com">
             <rect id="Content_4" height="61" width="115" y="539.67716" x="586.32483" fill="#fff" stroke="#000" rx="15"/></a>
         <a href="https://hoo.com">
             <rect id="Content_2" height="61" width="115" y="433.24258" x="916.33012" fill="#fff" stroke="#000" rx="15"/></a>
-        <a href="https://yahoo.com">
+        <a href="https://keshudana.github.io/ContentpageforCW.github.io/">
             <rect id="Content_1" height="61" width="115" y="458.26896" x="586.29896" fill="#fff" stroke="#000" rx="15"/></a>
 
         <line fill="none" stroke="#000" x1="534.56922" y1="60.99999" x2="750.56921" y2="60.99999" id="svg_16"/>
@@ -108,13 +108,13 @@
     <div class="footer-content">
         <div class="information">
             <ul>
-                <li><a class="page-link" href="#hero">Home</a></li>
+                <li><a class="page-link" href="https://anuja-rahul.github.io/web-dev-cw.github.io/">Home</a></li>
                 <li><a class="page-link" href="#about">our mission</a></li>
-                <li><a class="page-link" href="#all-content">Gallery</a></li>
-                <li><a class="page-link" href="#all-content">Shop</a></li>
+                <li><a class="page-link" href="https://nimesha-savinda.github.io/Gallery/">Gallery</a></li>
+                <li><a class="page-link" href="https://keshudana.github.io/Shop_for_CW.github.io/">Shop</a></li>
                 <li><a class="page-link" href="#all-content">Team</a></li>
-                <li><a class="page-link" href="#all-content">Sitemap</a></li>
-                <li><a class="page-link" href="#feedback">FeedBack</a></li>
+                <li><a class="page-link" href="https://nimesha-savinda.github.io/sitemap/">Sitemap</a></li>
+                <li><a class="page-link" href="https://anuja-rahul.github.io/web-dev-cw.github.io/feedback.html">FeedBack</a></li>
                 <li><a class="page-link" href="#contactus">Contact us</a></li>
                 <li><a class="page-link" href="content.html" target="_blank">Content</a></li>
                 <li><a class="page-link" href="#login">Login | Signup</a></li>
